--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.b00ks">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".di.BaseApplication"
@@ -16,6 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data android:name="api-key"
+            tools:replace="android:value"
+            android:value="@string/api_key_string"/>
     </application>
 
 </manifest>
