--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".view.DetailsActivity"
+            android:parentActivityName=".view.MainActivity"/>
+
         <meta-data android:name="api-key"
             tools:replace="android:value"
             android:value="@string/api_key_string"/>
