--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.google.code.gson:gson:2.8.0'
 
+    compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
+
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     compile 'org.parceler:parceler-api:1.1.6'
