--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
 
         <activity android:name=".view.FindBooksActivity"
             android:parentActivityName=".view.MainActivity"
+            android:theme="@style/DefaultAppTheme"
+            android:launchMode="singleTop"/>
+
+        <activity android:name=".view.BookDetailsActivity"
+            android:parentActivityName=".view.FindBooksActivity"
             android:theme="@style/DefaultAppTheme"/>
 
         <meta-data android:name="api-key"
