Refactor package names and adding new icons

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "com.example.b00ks"
+        applicationId "com.example.insight"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
