--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.b00ks">
+    package="com.example.insight">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".di.BaseApplication"
+        android:name="com.example.insight.di.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.MainActivity"
+        <activity android:name="com.example.insight.view.MainActivity"
             android:windowSoftInputMode="stateHidden"
             android:launchMode="singleTop">
             <intent-filter>
@@ -22,12 +22,12 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".view.DetailsActivity"
-            android:parentActivityName=".view.MainActivity"
+        <activity android:name="com.example.insight.view.DetailsActivity"
+            android:parentActivityName="com.example.insight.view.MainActivity"
             android:theme="@style/DefaultAppTheme"/>
 
-        <activity android:name=".view.BookDetailsActivity"
-            android:parentActivityName=".view.MainActivity"
+        <activity android:name="com.example.insight.view.BookDetailsActivity"
+            android:parentActivityName="com.example.insight.view.MainActivity"
             android:theme="@style/DefaultAppTheme"/>
 
         <meta-data android:name="api-key"
