--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,10 @@
-buildscript {
-    repositories {
-        maven { url 'https://maven.fabric.io/public' }
-    }
-
-    dependencies {
-        classpath 'io.fabric.tools:gradle:1.+'
-    }
-}
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'
-
-repositories {
-    maven { url 'https://maven.fabric.io/public' }
-}
-
 
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "com.example.insight"
+        applicationId "com.codevariant.insight"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
@@ -28,13 +13,14 @@ android {
     }
     buildTypes {
         debug {
+            applicationIdSuffix ".debug"
             Properties properties = new Properties()
             properties.load(project.rootProject.file('env.properties').newDataInputStream())
             def apiKey = properties.getProperty('api.key')
             resValue "string", "api_key", apiKey
         }
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -75,7 +61,4 @@ dependencies {
 
     compile 'org.parceler:parceler-api:1.1.6'
     annotationProcessor 'org.parceler:parceler:1.1.6'
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
-        transitive = true;
-    }
 }
