Configure build types

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.application'
 
+Properties properties = new Properties()
+properties.load(project.rootProject.file('env.properties').newDataInputStream())
+def apiKey = properties.getProperty('api.key')
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
@@ -10,19 +14,17 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        resValue "string", "api_key", apiKey
     }
     buildTypes {
         debug {
             applicationIdSuffix ".debug"
-            Properties properties = new Properties()
-            properties.load(project.rootProject.file('env.properties').newDataInputStream())
-            def apiKey = properties.getProperty('api.key')
-            resValue "string", "api_key", apiKey
             shrinkResources true
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         release {
+            shrinkResources true
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -30,23 +32,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
-
-
-
-
     compile('com.squareup.retrofit2:converter-simplexml:2.1.0', {
         exclude module: 'stax'
         exclude module: 'stax-api'
         exclude module: 'xpp3'
     })
-
-
-
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
